Updated Homepage and product css to display correctly on mobile

--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -92,3 +92,15 @@
   color: whitesmoke;
   width: 25%;
 }
+
+
+@media only screen and (max-width: 600px) {
+  .product {
+    display: flex;
+    width: 100%;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
+}
