--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -32,9 +32,20 @@
 
 
 .product {
-  border-radius: 32px;
+  border-radius: 20px;
   padding: 10px;
   margin: 5px;
   /* box-shadow: 3px 3px rgb(248, 223, 247), -1em 0 .4em rgb(255, 250, 177); */
 
+}
+
+@media only screen and (max-width: 600px) {
+  .home_row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+  }
+  
 }
